--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="details">
         <img
           class="image"
-          src="/assets/images/avatar-jessica.jpeg"
+          src="./assets/images/avatar-jessica.jpeg"
           alt="User Image"
         />
         <h1 class="heading">Jessica Randall</h1>
