--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="details">
+    <main class="container">
+      <section class="details">
         <img
           class="image"
           src="./assets/images/avatar-jessica.jpeg"
@@ -34,22 +34,23 @@
         <p class="location">London, United Kingdom</p>
 
         <p class="about">"Front-end developer and avid reader."</p>
-      </div>
+      </section>
 
-      <div class="buttons">
+      <section class="buttons">
         <button class="btn" type="button">GitHub</button>
         <button class="btn" type="button">Frontend Mentor</button>
         <button class="btn" type="button">LinkedIn</button>
         <button class="btn" type="button">Twitter</button>
         <button class="btn" type="button">Instagram</button>
+      </section>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Elliot</a>.
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Elliot</a>.
-    </div>
+    </footer>
   </body>
 </html>
